Preventing zooming on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 body {
   background-color: #000000;
+}
+
+h4 {
   color: #ffffff;
 }
 
